--- a/index.html
+++ b/index.html
@@ -831,19 +831,19 @@
 
         const ClientDetailView = () => {
             const { selectedClient: c, setView, setClientForm, deleteItem, orders, discardClient } = useContext(CRMContext);
+            
+            // MODIFICA RICHIESTA: Scroll to top on mount
+            useEffect(() => {
+                const mainContainer = document.querySelector('.flex-1.overflow-y-auto');
+                if(mainContainer) mainContainer.scrollTop = 0;
+            }, []);
+
             if (!c) return null;
             const clientOrders = orders.filter(o => o.client === c.ragioneSociale);
             const totalOrders = clientOrders.reduce((acc, curr) => acc + (parseFloat(curr.amount) || 0), 0);
             return (
                 <div className="animate-fade-in pb-32">
-                    <div className="flex justify-between items-center mb-6">
-                        <button onClick={() => setView('clients')} className="p-2 -ml-2 rounded-full hover:bg-gray-200"><Icons.ChevronRight size={24} className="rotate-180" /></button>
-                        <div className="flex gap-2">
-                            <button onClick={() => { setClientForm(c); setView('createClient'); }} className="p-2 text-blue-600 bg-blue-50 rounded-full"><Icons.Edit2 size={20}/></button>
-                            <button onClick={async () => { if(confirm("Scartare cliente?")) await discardClient(c.id); }} className="p-2 text-orange-500 bg-orange-50 rounded-full"><Icons.UserMinus size={20}/></button>
-                            <button onClick={async () => { if(await deleteItem('clients', c.id)) setView('clients'); }} className="p-2 text-red-500 bg-red-50 rounded-full"><Icons.Trash2 size={20}/></button>
-                        </div>
-                    </div>
+                    <div className="flex justify-between items-center mb-6"><button onClick={() => setView('clients')} className="p-2 -ml-2 rounded-full hover:bg-gray-200"><Icons.ChevronRight size={24} className="rotate-180" /></button><div className="flex gap-2"><button onClick={() => { setClientForm(c); setView('createClient'); }} className="p-2 text-blue-600 bg-blue-50 rounded-full"><Icons.Edit2 size={20}/></button><button onClick={async () => { if(confirm("Scartare cliente?")) await discardClient(c.id); }} className="p-2 text-orange-500 bg-orange-50 rounded-full"><Icons.UserMinus size={20}/></button><button onClick={async () => { if(await deleteItem('clients', c.id)) setView('clients'); }} className="p-2 text-red-500 bg-red-50 rounded-full"><Icons.Trash2 size={20}/></button></div></div>
                     <div className="space-y-6">
                         <div className="bg-white p-6 rounded-2xl shadow-sm border">
                             <h1 className="text-2xl font-bold text-gray-900 mb-1">{c.ragioneSociale}</h1>
@@ -854,11 +854,6 @@
                             </div>
                         </div>
                         
-                        <div className="grid grid-cols-2 gap-3">
-                            <button onClick={() => setView('clientReports')} className="bg-white p-4 rounded-xl border flex flex-col items-center gap-1"><Icons.ClipboardList size={20} className="text-gray-400"/><span className="text-xs font-bold">Report</span></button>
-                            <button onClick={() => setView('clientOrders')} className="bg-white p-4 rounded-xl border flex flex-col items-center gap-1"><Icons.ShoppingBag size={20} className="text-blue-500"/><span className="text-xs font-bold">Ordini</span></button>
-                        </div>
-
                         <button onClick={() => setView('clientCompletedTodos')} className="w-full py-3 bg-green-50 text-green-600 font-bold rounded-xl flex items-center justify-center gap-2"><Icons.CheckSquare size={16}/> TO-DO Completati</button>
 
                         <SectionContainer title="Anagrafica" icon={Icons.Building2}>
@@ -885,6 +880,10 @@
                             if(!ct?.nome) return null;
                             return ( <SectionContainer key={idx} title={`Contatto ${idx}`} icon={Icons.Users}><InfoRow label="Nome" value={ct.nome} /><InfoRow label="Mansione" value={ct.mansione} /><InfoRow label="Tel" value={ct.tel} /><InfoRow label="Mail" value={ct.mail} /></SectionContainer> );
                         })}
+                        <div className="grid grid-cols-2 gap-3 pt-4">
+                            <button onClick={() => setView('clientReports')} className="bg-white p-4 rounded-xl border flex flex-col items-center gap-1"><Icons.ClipboardList size={20} className="text-gray-400"/><span className="text-xs font-bold">Report</span></button>
+                            <button onClick={() => setView('clientOrders')} className="bg-white p-4 rounded-xl border flex flex-col items-center gap-1"><Icons.ShoppingBag size={20} className="text-blue-500"/><span className="text-xs font-bold">Ordini</span></button>
+                        </div>
                     </div>
                 </div>
             );
