--- a/index.html
+++ b/index.html
@@ -424,11 +424,11 @@
             const { reports, followups, ideas, todos, setSelectedReport, setSelectedFollowup, setSelectedIdea, setSelectedTodo, setView, toggleTaskCompletion, setReportForm, setTodoForm } = useContext(CRMContext);
             const items = useMemo(() => {
                 const arr = [];
-                reports.forEach(r => r.nextContactDate && !r.completed && arr.push({ ...r, type: 'report', label: 'Report', date: r.nextContactDate, icon: Icons.ClipboardList }));
-                followups.forEach(f => f.feedbackDate && !f.completed && arr.push({ ...f, type: 'offer', label: 'Offerta', date: f.feedbackDate, icon: Icons.Target }));
-                ideas.forEach(i => i.deadline && !i.completed && arr.push({ ...i, type: 'idea', label: 'Idea', date: i.deadline, icon: Icons.Lightbulb }));
-                todos.forEach(t => t.date && !t.completed && arr.push({ ...t, type: 'todo', label: 'To-Do', date: t.date, icon: Icons.CheckSquare }));
-                return arr.sort((a,b) => new Date(a.date) - new Date(b.date));
+                reports.forEach(r => r.nextContactDate && !r.completed && arr.push({ ...r, type: 'report', label: 'Report', todoDate: r.nextContactDate, icon: Icons.ClipboardList }));
+                followups.forEach(f => f.feedbackDate && !f.completed && arr.push({ ...f, type: 'offer', label: 'Offerta', todoDate: f.feedbackDate, icon: Icons.Target }));
+                ideas.forEach(i => i.deadline && !i.completed && arr.push({ ...i, type: 'idea', label: 'Idea', todoDate: i.deadline, icon: Icons.Lightbulb }));
+                todos.forEach(t => t.date && !t.completed && arr.push({ ...t, type: 'todo', label: 'To-Do', todoDate: t.date, icon: Icons.CheckSquare }));
+                return arr.sort((a,b) => new Date(a.todoDate) - new Date(b.todoDate));
             }, [reports, followups, ideas, todos]);
             return (
                 <div className="animate-fade-in pb-32">
@@ -442,7 +442,7 @@
                         {items.length === 0 ? <div className="text-center py-10 text-gray-400">Tutto fatto!</div> : items.map((item, idx) => (
                             <div key={idx} className="bg-white p-4 rounded-xl border border-gray-100 flex justify-between items-center cursor-pointer active:scale-95 transition-transform"
                                 onClick={() => { 
-                                    const { icon, label, type, date, ...cleanItem } = item;
+                                    const { icon, label, type, todoDate, ...cleanItem } = item;
                                     const itemWithReturn = { ...cleanItem, _returnView: 'todo' };
                                     if(item.type === 'report') { setSelectedReport(itemWithReturn); setView('detail'); }
                                     else if(item.type === 'offer') { setSelectedFollowup(itemWithReturn); setView('followupDetail'); }
@@ -453,7 +453,7 @@
                                 <div>
                                     <div className="flex items-center gap-2 text-xs font-bold uppercase text-gray-400 mb-1"><item.icon size={12}/> {item.label}</div>
                                     <div className="font-bold text-gray-800">{item.client}</div>
-                                    <div className="text-xs text-red-500 font-bold mt-1">Scade: {new Date(item.date).toLocaleDateString('it-IT')}</div>
+                                    <div className="text-xs text-red-500 font-bold mt-1">Scade: {new Date(item.todoDate).toLocaleDateString('it-IT')}</div>
                                 </div>
                                 <button onClick={(e) => { e.stopPropagation(); toggleTaskCompletion(item.type === 'report' ? 'reports' : (item.type === 'offer' ? 'followups' : (item.type === 'idea' ? 'ideas' : 'todos')), item.id, false); }} className="p-2 bg-green-500 text-white rounded-full"><Icons.Check size={16}/></button>
                             </div>
@@ -565,11 +565,11 @@
              if(!selectedClient) return null;
              const items = useMemo(() => {
                 const arr = [];
-                reports.filter(r => r.client === selectedClient.ragioneSociale).forEach(r => r.nextContactDate && r.completed && arr.push({ ...r, type: 'report', label: 'Report', date: r.nextContactDate, icon: Icons.ClipboardList }));
-                followups.filter(f => f.client === selectedClient.ragioneSociale).forEach(f => f.feedbackDate && f.completed && arr.push({ ...f, type: 'offer', label: 'Offerta', date: f.feedbackDate, icon: Icons.Target }));
-                ideas.filter(i => i.client === selectedClient.ragioneSociale).forEach(i => i.deadline && i.completed && arr.push({ ...i, type: 'idea', label: 'Idea', date: i.deadline, icon: Icons.Lightbulb }));
-                todos.filter(t => t.client === selectedClient.ragioneSociale).forEach(t => t.date && t.completed && arr.push({ ...t, type: 'todo', label: 'To-Do', date: t.date, icon: Icons.CheckSquare }));
-                return arr.sort((a,b) => new Date(b.date) - new Date(a.date));
+                reports.filter(r => r.client === selectedClient.ragioneSociale).forEach(r => r.nextContactDate && r.completed && arr.push({ ...r, type: 'report', label: 'Report', todoDate: r.nextContactDate, icon: Icons.ClipboardList }));
+                followups.filter(f => f.client === selectedClient.ragioneSociale).forEach(f => f.feedbackDate && f.completed && arr.push({ ...f, type: 'offer', label: 'Offerta', todoDate: f.feedbackDate, icon: Icons.Target }));
+                ideas.filter(i => i.client === selectedClient.ragioneSociale).forEach(i => i.deadline && i.completed && arr.push({ ...i, type: 'idea', label: 'Idea', todoDate: i.deadline, icon: Icons.Lightbulb }));
+                todos.filter(t => t.client === selectedClient.ragioneSociale).forEach(t => t.date && t.completed && arr.push({ ...t, type: 'todo', label: 'To-Do', todoDate: t.date, icon: Icons.CheckSquare }));
+                return arr.sort((a,b) => new Date(b.todoDate) - new Date(a.todoDate));
             }, [reports, followups, ideas, todos, selectedClient]);
 
             return (
@@ -584,7 +584,7 @@
                                 <div>
                                     <div className="flex items-center gap-2 text-xs font-bold uppercase text-gray-400 mb-1"><item.icon size={12}/> {item.label}</div>
                                     <div className="font-bold text-gray-800 strike-through line-through">{item.client}</div>
-                                    <div className="text-xs text-gray-500 font-bold mt-1">Completato: {new Date(item.date).toLocaleDateString('it-IT')}</div>
+                                    <div className="text-xs text-gray-500 font-bold mt-1">Completato: {new Date(item.todoDate).toLocaleDateString('it-IT')}</div>
                                 </div>
                                 <button onClick={(e) => { e.stopPropagation(); toggleTaskCompletion(item.type === 'report' ? 'reports' : (item.type === 'offer' ? 'followups' : (item.type === 'idea' ? 'ideas' : 'todos')), item.id, true); }} className="p-2 bg-gray-200 text-gray-600 rounded-full text-xs">Ripristina</button>
                             </div>
@@ -1054,11 +1054,11 @@
             return (
                 <div className="animate-fade-in pb-32">
                     <div className="flex justify-between items-center mb-6"><button onClick={() => setView(report._returnView || 'list')} className="p-2 -ml-2 rounded-full hover:bg-gray-200"><Icons.ChevronRight size={24} className="rotate-180" /></button><div className="flex gap-2">
-                    <button onClick={() => toggleTaskCompletion('reports', report.id, report.completed)} className="p-2 text-green-600 bg-green-50 rounded-full"><Icons.Check size={20}/></button>
+                    <button onClick={() => { toggleTaskCompletion('reports', report.id, report.completed); setView(report._returnView || 'list'); }} className="p-2 text-green-600 bg-green-50 rounded-full"><Icons.Check size={20}/></button>
                     <button onClick={() => { setReportForm(report); setView('create'); }} className="p-2 text-blue-600 bg-blue-50 rounded-full"><Icons.Edit2 size={20}/></button><button onClick={async () => { if(await deleteItem('reports', report.id)) setView(report._returnView || 'list'); }} className="p-2 text-red-500 bg-red-50 rounded-full"><Icons.Trash2 size={20}/></button></div></div>
                     <div className="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 space-y-4">
                         <InfoBox label="Cliente" value={report.client} icon={Icons.Users} /><InfoBox label="Data" value={new Date(report.date).toLocaleDateString('it-IT')} icon={Icons.Calendar} />
-                        <InfoBox label="Tipo Contatto" value={report.contactType} icon={Icons.Phone} />
+                        {/* MODIFICA: Visualizzazione Tipo Contatto */}
                         <InfoBox label="Categoria" value={report.category} icon={Icons.Target} />
                         <SectionDisplay title="Descrizione" content={report.description} />
                         <SectionContainer title="Follow-up" icon={Icons.AlarmCheck}>
